(lang dune 2.8)
(name prbnmcn-clustering)
(version 0.0.2)
(generate_opam_files true)
(source (uri git+https://github.com/igarnier/prbnmcn-clustering))
(bug_reports http://github.com/igarnier/prbnmcn-clustering)
(license MIT)
(authors "Ilias Garnier")
(maintainers igarnier@protonmail.com)
(package (name prbnmcn-clustering)
  (description
    "Clustering with K-means, K-medoids and agglomerative clustering")
  (synopsis "Clustering library") (depends (ocaml (>= 4.12.0)) (psq (>= 0.2.1)) ))
(homepage http://github.com/igarnier/prbnmcn-clustering)
(use_standard_c_and_cxx_flags true)
